# meww

./: .gitignore  .gitmodules  devenv.nix  example.mlem  flake.nix  meww.cabal  package.yaml  stack.yaml
app/: Check.hs  Common.hs  Eval.hs  Main.hs  Parser.hs  Syntax.hs  Type.hs
app/Compiler/: ANF.hs
app/Raw/: Parser.hs  Syntax.hs
app/Syntax/: Builtin.hs  Data.hs  Term.hs  Toplevel.hs
crates/eww/: Cargo.toml
crates/eww/src/: client.rs  opts.rs
crates/eww/src/config/: eww_config.rs
crates/yuck/src/config/: data_definition.rs  fun_definition.rs  mod.rs  toplevel.rs
examples/eww-bar/: eww.yuck
src/: Common.hs  Type.hs
src/Check/: Check.hs  Cxt.hs  Globals.hs  Infer.hs  State.hs  Unify.hs
src/Compiler/: ANF.hs
src/Raw/: Builtin.hs  Parser.hs  State.hs  Syntax.hs
src/Raw/Parser/: Expr.hs  FC.hs  Helper.hs  New.hs  Ops.hs  Stack.hs  Type.hs
src/TT/: Ctxt.hs  Name.hs
test/: Spec.hs
tests/: Test.hs
widgets/: Cargo.toml  hsbindgen.toml  widgets.cabal
widgets/src/: Widgets.hs  lib.rs
