[package]
name = "widgets"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
ariadne = "0.2.0"
chumsky = { version = "0.9.2", features = ["default", "nightly"] }
gtk4 = "0.6.6"
gtk4-layer-shell = "0.0.3"
hs-bindgen = { git = "https://github.com/herkhinah/hs-bindgen", branch = "shekhinah/FunPtr", features = ["full"] }
phf = { version = "0.11.1", features = ["phf_macros"] }


